[project]
name = "gulp"
dynamic = ["version"]
description = "Unoffical GULP Python Package."
authors = [
    { name = "The GULP Developers", email = "gulpcode@curtin.edu.au" },
    { name = "Liu Gaoyong", email = "liugaoyong_88@163.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
repository = "https://github.com/LiuGaoyong/gulp-wheel.git"
gulp_repository = "https://gulp.curtin.edu.au/index.html"
gulp_documentation = "https://gulp.curtin.edu.au/help/help_60_txt.html"

[project.scripts]
gulp = "gulp.executable:gulp"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
fortran-compiler = ">=1.10.0,<2"
python = ">=3.8"
make = ">=4.4.1,<5"

[tool.pixi.target.win-64.dependencies]
posix = ">=1"

[tool.pixi.tasks]
